Fixing up spacing for Gazer's nav

--- a/css/gazer.css
+++ b/css/gazer.css
@@ -240,6 +240,7 @@
 
 .list {
   margin-bottom: 10px;
+  font-family: 'Times New Roman', TimesNewRoman, Times, Baskerville, Georgia, serif;
 }
 
 .c-private-rooms {
@@ -372,6 +373,7 @@
 
 .list-2 {
   margin-bottom: 20px;
+  font-family: 'Times New Roman', TimesNewRoman, Times, Baskerville, Georgia, serif;
 }
 
 .list-item-8 {
